Fix horizontal scroll

--- a/src/Page/Page.scss
+++ b/src/Page/Page.scss
@@ -5,6 +5,12 @@ $scroll-top-threshold: 20px;
 $page-background-color: rgba($D70, .95);
 $image-container-offset: 30px;
 
+.pageWrapper {
+  overflow-x: auto;
+  display: flex;
+  flex-flow: column;
+}
+
 .page {
   flex: 1 1 auto;
   display: flex;
@@ -12,6 +18,7 @@ $image-container-offset: 30px;
   min-height: 0;
   position: relative;
   background-color: $page-background-color;
+  min-width: 894px; // TODO: Use value from Grid.scss
 }
 
 .fixed-container {
