--- a/stories/Page/PageExample.scss
+++ b/stories/Page/PageExample.scss
@@ -18,7 +18,9 @@
 }
 
 [data-hook="body-content"] {
-  @include PageConteiner;
+  height: calc(100vh - 16px); // -16px account for chrome default body margin
+  display: flex;
+  flex-flow: column;
   margin-left: 200px;
 }
 
